fixed layout issue

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 40px;
+    min-height: 90vh;
 }
 
 .screen {
